--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@ p {
 
 <!-- PAGE 1 -->
 <div id="p1" class="page active">
-  <h1>🥰</h1>
-  <button onclick="goTo(2)">oru question choyikatte?</button>
-  <button onclick="goTo(3)">enk oru karyam parayan ind</button>
+  <h1> Good Morning kutta🥰</h1>
+  <button onclick="goTo(2)">oru question choyikano?</button>
+  <button onclick="goTo(3)"> ATHO ?</button>
+  <button onclick="goTo(4)"> Oru karyam paranja matio? </button>
 </div>
 
 <!-- PAGE 2 -->
@@ -71,7 +72,7 @@ p {
 
 <!-- PAGE 3 -->
 <div id="p3" class="page">
-  <h1>Gowtham Krishna</h1>
+  <h1> Pretekich onum illa, en eyy poyi kayinjapo nan oru message type chayt ayakam en karuti, apo vijarich oru variety engane ayachalo en, so try akki nokiyat anu, atre ollu. Pne  Epo sherikum nalla samadham, happiness oke ind, and i miss you a lot 🥹</h1>
   <button onclick="goTo(1)">Back</button>
 </div>
 
