--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ p {
     apo question choyikame 🤗
   </h2>
   <button onclick="goTo(1)">Back</button>
+  <button onclick="goTo(3)">Back</button>
 </div>
 
 <!-- PAGE 3 -->
