--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ p {
 
 <!-- PAGE 1 -->
 <div id="p1" class="page active">
-  <h1> Good Morning kutta🥰</h1>
+  <h1> Good Morning kutta🥰 Have a great day</h1>
   <button onclick="goTo(2)">oru question choyikano?</button>
   <button onclick="goTo(3)"> ATHO ?</button>
   <button onclick="goTo(4)"> Oru karyam paranja matio? </button>
@@ -67,8 +67,7 @@ p {
     vaykit vanit vilik,<br>
     apo question choyikame 🤗
   </h2>
-  <button onclick="goTo(1)">Back</button>
-  <button onclick="goTo(3)">Back</button>
+  <button onclick="goTo(1,3)">Back</button>
 </div>
 
 <!-- PAGE 3 -->
