--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ p {
 <div id="p1" class="page active">
   <h1> Good Morning kutta🥰 Have a great day</h1>
   <button onclick="goTo(2)">oru question choyikano?</button>
-  <button onclick="goTo(3)"> ATHO ?</button>
+  <h1> Atho </h1>
   <button onclick="goTo(4)"> Oru karyam paranja matio? </button>
 </div>
 
@@ -67,8 +67,9 @@ p {
     vaykit vanit vilik,<br>
     apo question choyikame 🤗
   </h2>
-  <button onclick="goTo(1,3)">Back</button>
+  <button onclick="goTo(1)">Back</button>
 </div>
+  
 
 <!-- PAGE 3 -->
 <div id="p4" class="page">
